--- a/home/templates/game/base.html
+++ b/home/templates/game/base.html
@@ -35,6 +35,7 @@
             <div class="navbar-nav">
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+              <a class="nav-item nav-link" href="{% url 'stat' %}">Statystyki</a>
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
               <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
@@ -59,18 +60,24 @@
 
           {% endblock %}
         </div>
+        {% if user.is_authenticated %}
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <h3>Twoja Postać</h3>
+            <p class='text-muted'>Statystyki Postaci:
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light"></li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">
                 </li>
               </ul>
-
+        {% else %}
+        <div class="col-md-4">
+          <div class="content-section">
+            <h3>Twoja Postać</h3>
+            <p class='text-muted'>Nie jesteś zalogowany !
+        {% endif %}
             </p>
           </div>
         </div>
