--- a/users/templates/users/stat.html
+++ b/users/templates/users/stat.html
@@ -9,10 +9,14 @@
         <fieldset class="form-group">
           <legend class="border-bottom mb-4"> Statystyki Info</legend>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light">  {{ request.user.Resources.stat_str }}</li>
-            <li class="list-group-item list-group-item-light"></li>
-            <li class="list-group-item list-group-item-light"></li>
-            <li class="list-group-item list-group-item-light"></li>
+            <li class="list-group-item list-group-item-light">Poziom:  {{ Resources.stat_lvl }}</li>
+            <li class="list-group-item list-group-item-light">Doświadczenie:  {{ Resources.stat_minexp }} / {{ Resources.stat_maxexp }}</</li>
+            <li class="list-group-item list-group-item-light">Siła:  {{ Resources.stat_str }}</li>
+            <li class="list-group-item list-group-item-light">Życie:  {{ Resources.stat_vit }}</</li>
+            <li class="list-group-item list-group-item-light">Obrona:  {{ Resources.stat_dex }}</</li>
+            <li class="list-group-item list-group-item-light">Złoto:  {{ Resources.stat_money }}</</li>
+            <li class="list-group-item list-group-item-light">Jedzenie:  {{ Resources.stat_food }}</</li>
+            <li class="list-group-item list-group-item-light">Energia:  {{ Resources.stat_energy }}</</li>
           </ul>
         </fieldset>
     </div>
